# SurvivalExperience

./: CMakeLists.txt
src/app/client/: ClientApp.cpp  ClientApp.hpp  main.cpp
src/app/server/: ServerApp.cpp  ServerApp.hpp  main.cpp
src/assets/: enemy.spritecfg  player.spritecfg
src/engine/core/: Config.hpp
src/engine/graphics/: Animation.cpp  Animation.hpp
src/engine/networking/: NetworkManager.cpp  NetworkManager.hpp
src/engine/resources/: ResourceManager.cpp  ResourceManager.hpp
src/game/: GameSimulation.cpp  GameSimulation.hpp
src/game/components/: Components.hpp
src/game/data/: AssetStandards.hpp  GameData.hpp  SpriteSheetConfig.cpp  SpriteSheetConfig.hpp
src/game/ecs/: Entity.hpp  EntityManager.cpp  EntityManager.hpp
src/game/systems/: AISystem.cpp  AISystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  CraftingSystem.cpp  CraftingSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  GatherSystem.cpp  GatherSystem.hpp  InventorySystem.cpp  InventorySystem.hpp  MovementSystem.cpp  MovementSystem.hpp  SurvivalSystem.cpp  SurvivalSystem.hpp
src/game/world/: World.cpp  World.hpp
src/shared/ids/: Types.hpp
src/shared/math/: Vec2.hpp
src/shared/protocol/: Messages.hpp
src/tools/asset_tool/: main.cpp
